--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
   "name": "ourcourseville",
   "module": "index.ts",
-  "type": "module",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun run ./src/index.js",
-    "start": "bun run ./src/index.js",
-    "build": "bun build --target=bun --outfile=build/index.js ./src"
-  },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/chrome": "^0.0.273",
     "prettier": "^3.3.3",
     "prettier-plugin-organize-imports": "^4.1.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
-  "dependencies": {
-    "playwright": "^1.47.2"
-  }
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "bun run ./src/index.js",
+    "start": "bun run ./src/index.js",
+    "build": "bun run tsc && node copy-files.mjs"
+  },
+  "type": "module"
 }
