--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,15 @@
   "name": "Scraper Extension",
   "version": "1.0",
   "description": "Scrapes elements from the current tab.",
-  "permissions": ["tabs", "activeTab", "scripting", "<all_urls>"],
+  "permissions": ["tabs", "activeTab", "scripting"],
+  "host_permissions": [
+    "https://alpha.mycourseville.com/",
+    "https://mycourseville.com/"
+  ],
   "background": {
-    "service_worker": "build/background.js"
+    "service_worker": "background.js"
   },
   "action": {
-    "default_popup": "build/popup.html"
+    "default_popup": "popup.html"
   }
 }
