--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,8 @@
     "https://mycourseville.com/"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "action": {
     "default_popup": "popup.html"
