--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,17 @@
     "https://alpha.mycourseville.com/",
     "https://mycourseville.com/"
   ],
+  "background": {
+    "service_worker": "background.js",
+    "type": "module"
+  },
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "content_scripts": [
+    {
+      "matches": ["<all_urls>"],
+      "js": ["scripts/scrape.js"]
+    }
+  ]
 }
