--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
+    "target": "ES6",
+    "module": "ES6",
     "moduleResolution": "Node",
-    "outDir": "build", // Ensure this is set to 'build'
+    "noEmit": true, // No need to emit .js files, Babel will handle that
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
