--- a/backend/.env.template
+++ b/backend/.env.template
@@ -1,3 +1,5 @@
 ASPNETCORE_ENVIRONMENT=Development
 # ASPNETCORE_ENVIRONMENT=Production
 ASPNETCORE_URLS="http://localhost:5203"
+
+GOOGLE_APPLICATION_CREDENTIALS=firebase-adminsdk.json
