--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,4 +2,7 @@ ASPNETCORE_ENVIRONMENT=Development
 # ASPNETCORE_ENVIRONMENT=Production
 ASPNETCORE_URLS="http://localhost:5203"
 
+Record__DB=ourcourseville
+Record__Collection=records
+
 GOOGLE_APPLICATION_CREDENTIALS=firebase-adminsdk.json
