--- a/extension/package.json
+++ b/extension/package.json
@@ -13,8 +13,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun run ./src/index.js",
     "start": "bun run ./src/index.js",
-    "build": "bun run tsc --noEmit && babel src --extensions '.ts,.js' --out-dir build && node copy-files.mjs manifest.json",
-    "build-prod": "bun run tsc --noEmit && babel src --extensions '.ts,.js' --out-dir build-prod && node copy-files.mjs manifest.prod.json"
+    "build-dev": "bun run tsc --noEmit && babel src --extensions '.ts,.js' --out-dir build && node copy-files.mjs manifest.json",
+    "build-prod": "bun run tsc --noEmit && babel src --extensions '.ts,.js' --out-dir build-prod && node copy-files.mjs manifest.prod.json",
+    "build": "bun run build-dev && bun run build-prod"
   },
   "type": "module",
   "dependencies": {
