--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,6 +2,8 @@ ASPNETCORE_ENVIRONMENT=Development
 # ASPNETCORE_ENVIRONMENT=Production
 ASPNETCORE_URLS="http://localhost:5203"
 
+API__Key=apikey
+
 Firestore__DB=ourcourseville
 Firestore__Faculties=faculties_dev
 Firestore__Courses=courses_dev
