--- a/backend/.env.template
+++ b/backend/.env.template
@@ -3,6 +3,7 @@ ASPNETCORE_ENVIRONMENT=Development
 ASPNETCORE_URLS="http://localhost:5203"
 
 API__Key=apikey
+ConnectionStrings__Redis="localhost:6379,password=5678"
 
 Firestore__DB=ourcourseville
 Firestore__Faculties=faculties_dev
