--- a/backend/.env.template
+++ b/backend/.env.template
@@ -4,6 +4,8 @@ ASPNETCORE_URLS="http://localhost:5203"
 
 API__Key=apikey
 ConnectionStrings__Redis="localhost:6379,password=5678"
+TTL__Faculty=86400000 # 1 day
+TTL__Course=3600000 # 1 hour
 
 Firestore__DB=ourcourseville
 Firestore__Faculties=faculties_dev
