--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -17,5 +17,6 @@
   "action": {
     "default_popup": "popup.html"
   },
-  "api_url": "http://localhost:5203/api/v1"
+  "api_url": "http://localhost:5203/api/v1",
+  "api_key": "apikey"
 }
