--- a/extension/package.json
+++ b/extension/package.json
@@ -15,7 +15,8 @@
     "start": "bun run ./src/index.js",
     "build-dev": "bun run tsc --noEmit && babel src --extensions '.ts,.js' --out-dir build && node copy-files.mjs manifest.json",
     "build-prod": "bun run tsc --noEmit && babel src --extensions '.ts,.js' --out-dir build-prod && node copy-files.mjs manifest.prod.json",
-    "build": "bun run build-dev && bun run build-prod"
+    "zip-prod": "zip -r build-prod.zip build-prod",
+    "build": "bun run build-dev && bun run build-prod && bun run zip-prod"
   },
   "type": "module",
   "dependencies": {
