--- a/backend/Makefile
+++ b/backend/Makefile
@@ -3,3 +3,9 @@ watch:
 
 seed:
 	dotnet run seed
+
+pull:
+	docker pull --platform linux/x86_64 ghcr.io/bookpanda/ourcourseville:latest
+
+qa:
+	docker-compose -f docker-compose.qa.yml up --build
