--- a/frontend/.env.template
+++ b/frontend/.env.template
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_URL=http://localhost:5203
-NEXT_PUBLIC_FACULTY_TTL=86400000 # 1 day
 NEXT_PUBLIC_COURSE_TTL=3600000 # 1 hour
+NEXT_PUBLIC_FACULTY_TTL=86400000 # 1 day
+API_URL=http://localhost:5203
 API_KEY=apikey
