--- a/vite-ext/package.json
+++ b/vite-ext/package.json
@@ -37,6 +37,9 @@
     "fs-extra": "^11.2.0",
     "nodemon": "^3.1.0",
     "postcss": "^8.4.38",
+    "prettier": "^3.3.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "tailwindcss": "^3.4.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
