--- a/vite-ext/package.json
+++ b/vite-ext/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "webextension-polyfill": "^0.11.0"
   },
   "devDependencies": {
