--- a/backend/.env.template
+++ b/backend/.env.template
@@ -2,6 +2,7 @@ ASPNETCORE_ENVIRONMENT=Development
 # ASPNETCORE_ENVIRONMENT=Production
 ASPNETCORE_URLS="http://localhost:5203"
 
+Web__Url=http://localhost:3000
 API__Key=apikey
 ConnectionStrings__Redis="localhost:6379,password=5678"
 TTL__Faculty=86400000 # 1 day
