--- a/.github/workflows/ext-ci.yml
+++ b/.github/workflows/ext-ci.yml
@@ -33,13 +33,18 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
+
+      - name: Install Bun
+        run: |
+          curl -fsSL https://bun.sh/install | bash
+          export BUN_INSTALL="$HOME/.bun"
+          export PATH="$BUN_INSTALL/bin:$PATH"
 
       - name: Install dependencies
-        run: yarn --cwd extension # Install dependencies in "extension" directory
+        run: bun --cwd extension # Install dependencies in "extension" directory
 
       - name: Build
-        run: yarn build --cwd extension # Build from the "extension" directory
+        run: bun build --cwd extension # Build from the "extension" directory
 
       - name: Upload extension artifacts
         uses: actions/upload-artifact@v3
