--- a/.github/workflows/ext-ci.yml
+++ b/.github/workflows/ext-ci.yml
@@ -35,13 +35,9 @@ jobs:
           node-version: 18
 
       - name: Install Bun
-        run: |
-          curl -fsSL https://bun.sh/install | bash
-          export BUN_INSTALL="$HOME/.bun"
-          export PATH="$BUN_INSTALL/bin:$PATH"
-          echo 'export BUN_INSTALL="$HOME/.bun"' >> $HOME/.bashrc
-          echo 'export PATH="$BUN_INSTALL/bin:$PATH"' >> $HOME/.bashrc
-          source $HOME/.bashrc
+        uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: 1.1.26
 
       - name: Install dependencies
         run: bun install --cwd extension # Install dependencies in "extension" directory
