--- a/.github/workflows/ext-ci.yml
+++ b/.github/workflows/ext-ci.yml
@@ -38,9 +38,15 @@ jobs:
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: 1.1.26
+    
+      - name: Check working directory
+        run: pwd
 
       - name: Install dependencies
         run: bun install --cwd extension # Install dependencies in "extension" directory
+
+      - name: Check working directory
+        run: pwd
 
       - name: Build
         run: bun run build --cwd extension # Build from the "extension" directory
