--- a/.github/workflows/ext-ci.yml
+++ b/.github/workflows/ext-ci.yml
@@ -39,17 +39,17 @@ jobs:
         with:
           bun-version: 1.1.26
     
-      - name: Check working directory
-        run: pwd
+      - name: Change working directory
+        run: cd extension
 
       - name: Install dependencies
-        run: bun install --cwd extension # Install dependencies in "extension" directory
+        run: bun install # Install dependencies in "extension" directory
 
       - name: Check working directory
         run: pwd
 
       - name: Build
-        run: bun run build --cwd extension # Build from the "extension" directory
+        run: bun run build # Build from the "extension" directory
 
       - name: Upload extension artifacts
         uses: actions/upload-artifact@v3
