get extension btn

--- a/.github/workflows/ext-ci.yml
+++ b/.github/workflows/ext-ci.yml
@@ -56,5 +56,5 @@ jobs:
       - name: Upload extension artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: vite-web-extension
+          name: ourcourseville-chrome-extension
           path: extension/dist
