--- a/frontend/.env.template
+++ b/frontend/.env.template
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_RECENT_COURSES_TTL=31536000000 # 1 year
+NEXT_PUBLIC_EXTENSION_URL=
 API_URL=http://localhost:5203
 API_KEY=apikey
-EXTENSION_URL=
